--- a/pages/buzos.html
+++ b/pages/buzos.html
@@ -93,10 +93,12 @@
           </div>
           <div class="card">
             <figure>
-              <img src="../img/WhatsApp Image 2022-11-02 at 12.14.41.jpeg" />
+              <img
+                src="../img/Supreme-Capital-Hooded-Sweatshirt-Red-433x433.jpg"
+              />
             </figure>
             <div class="contenido">
-              <h2>Nike Sportswear Joggers</h2>
+              <h2>Supreme Capital Hooded</h2>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -111,28 +113,32 @@
           </div>
           <div class="card">
             <figure>
-              <img src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg" />
+              <img
+                src="../img/Supreme-The-North-Face-Studded-Nuptse-Jacket-Red-433x433.jpg"
+              />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2>Supreme The North Face Studded</h2>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
-              <img src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg" />
+              <img src="../img/Fear of God Essentials Knit Sweater Moss.jpeg" />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2>Fear of God Essentials Knit Sweater Moss</h2>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
-              <img src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg" />
+              <img
+                src="../img/Anti-Social-Social-Club-ASSC-Cherry-Red-Hoodie-433x433.jpg"
+              />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2>Anti Social Social Club ASSC Cherry Red Hoodie</h2>
               <a href="#">Comprar</a>
             </div>
           </div>
