--- a/pages/buzos.html
+++ b/pages/buzos.html
@@ -104,10 +104,10 @@
           </div>
           <div class="card">
             <figure>
-              <img src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg" />
+              <img src="../img/The North Face -1996 Retro Nuptse.jpeg" />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2>The North Face Retro Nuptse</h2>
               <a href="#">Comprar</a>
             </div>
           </div>
