--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="titulos">
           <h1 class="animate__animated animate__flipInX">Sobre Nosotros</h1>
         </div>
-        <p>
+        <p class="animate__animated animate__backInLeft">
           West Size nace en 2022 con el objetivo de traer a Argentina un estilo
           de ropa que te va a volar la cabeza, la idea de la marca se basa en
           ropa Streetwear. Fundado por 2 personas que comenzaron solos y hoy en
@@ -93,7 +93,7 @@
       </div>
       <div class="col-12 col-md-6">
         <iframe
-          class="animate__animated animate__slideInUp"
+          class="animate__animated animate__backInRight"
           width="560"
           height="315"
           src="https://www.youtube.com/embed/A8CDVkV5pso"
