--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="container row">
       <div class="col-12 col-md-6">
         <div class="titulos">
-          <h1 class="animate__animated animate__flipInX">Sobre Nosotros</h1>
+          <h1 class="animate__animated animate__backInLeft">Sobre Nosotros</h1>
         </div>
         <p class="animate__animated animate__backInLeft">
           West Size nace en 2022 con el objetivo de traer a Argentina un estilo
