--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
       <div class="footer-sm">
         <div class="container">
           <div class="row footer-sm__redes">
-            <div class="col">Buscanos en las redes</div>
-            <div class="col">
+            <div class="col-12">
               <a href="#"><i class="fa-brands fa-twitter tw"></i></a>
               <a href="#"><i class="fa-brands fa-instagram ig"></i></a>
               <a href="#"><i class="fa-brands fa-whatsapp wp"></i></a>
