--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           creciendo y estamos seguros que esto es recién el comienzo.
         </p>
       </div>
-      <div class="col-12 col-md-6">
+      <div class="video__publicacion col-12 col-md-6">
         <iframe
           class="animate__animated animate__backInRight"
           width="560"
