--- a/pages/buzos.html
+++ b/pages/buzos.html
@@ -25,6 +25,8 @@
       crossorigin="anonymous"
     ></script>
     <title>Buzos | West Size</title>
+    <meta name="description" content="Producto (Buzos) de la tienda WestSize" />
+    <meta name="keywords" content="Drivers, Argentina, Ropa, Oversize" />
   </head>
   <body>
     <header>
@@ -84,6 +86,7 @@
             <figure>
               <img
                 src="../img/hoodie-fuck-love-atras-negro-web-b10898d23a360c0e8b16628679596979-1024-1024.png"
+                alt="Fuck Love"
               />
             </figure>
             <div class="contenido">
@@ -95,6 +98,7 @@
             <figure>
               <img
                 src="../img/Supreme-Capital-Hooded-Sweatshirt-Red-433x433.jpg"
+                alt="Supreme Capital Hooded"
               />
             </figure>
             <div class="contenido">
@@ -104,7 +108,10 @@
           </div>
           <div class="card">
             <figure>
-              <img src="../img/The North Face -1996 Retro Nuptse.jpeg" />
+              <img
+                src="../img/The North Face -1996 Retro Nuptse.jpeg"
+                alt="The North Face Retro Nuptse"
+              />
             </figure>
             <div class="contenido">
               <h2>The North Face Retro Nuptse</h2>
@@ -115,6 +122,7 @@
             <figure>
               <img
                 src="../img/Supreme-The-North-Face-Studded-Nuptse-Jacket-Red-433x433.jpg"
+                alt="Supreme The North Face Studded"
               />
             </figure>
             <div class="contenido">
@@ -124,7 +132,10 @@
           </div>
           <div class="card">
             <figure>
-              <img src="../img/Fear of God Essentials Knit Sweater Moss.jpeg" />
+              <img
+                src="../img/Fear of God Essentials Knit Sweater Moss.jpeg"
+                alt="Fear of God Essentials Knit Sweater Moss"
+              />
             </figure>
             <div class="contenido">
               <h2>Fear of God Essentials Knit Sweater Moss</h2>
@@ -135,6 +146,7 @@
             <figure>
               <img
                 src="../img/Anti-Social-Social-Club-ASSC-Cherry-Red-Hoodie-433x433.jpg"
+                alt="Anti Social Social Club ASSC Cherry Red Hoodie"
               />
             </figure>
             <div class="contenido">
