--- a/pages/comocomprar.html
+++ b/pages/comocomprar.html
@@ -25,6 +25,11 @@
       crossorigin="anonymous"
     ></script>
     <title>Como Comprar / FAQ´S | West Size</title>
+    <meta
+      name="description"
+      content="Como Comprar/FAQ´S de la tienda WestSize"
+    />
+    <meta name="keywords" content="Comprar, Argentina, Venta, Consulta" />
   </head>
   <body>
     <header>
