--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,6 +25,8 @@
       crossorigin="anonymous"
     ></script>
     <title>Contacto | West Size</title>
+    <meta name="description" content="Contacto de la tienda WestSize" />
+    <meta name="keywords" content="Contacto, Argentina, Consulta" />
   </head>
   <body>
     <header>
