--- a/pages/politica.html
+++ b/pages/politica.html
@@ -25,6 +25,8 @@
       crossorigin="anonymous"
     ></script>
     <title>Politica | West Size</title>
+    <meta name="description" content="Politica de la tienda WestSize" />
+    <meta name="keywords" content="Politica, Argentina, Reglas, Leyes" />
   </head>
   <body>
     <header>
