--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -25,6 +25,11 @@
       crossorigin="anonymous"
     ></script>
     <title>Remera | West Size</title>
+    <meta
+      name="description"
+      content="Producto (Remeras) de la tienda WestSize"
+    />
+    <meta name="keywords" content="Streetwear, Argentina, Ropa, Oversize" />
   </head>
   <body>
     <header>
@@ -84,6 +89,7 @@
             <figure>
               <img
                 src="../img/hoodie-fuck-love-atras-negro-web-b10898d23a360c0e8b16628679596979-1024-1024.png"
+                alt="Fuck Love"
               />
             </figure>
             <div class="contenido">
@@ -93,7 +99,10 @@
           </div>
           <div class="card">
             <figure>
-              <img src="../img/WhatsApp Image 2022-11-02 at 12.14.41.jpeg" />
+              <img
+                src="../img/WhatsApp Image 2022-11-02 at 12.14.41.jpeg"
+                alt="Nike Sportswear Joggers"
+              />
             </figure>
             <div class="contenido">
               <h2>Nike Sportswear Joggers</h2>
@@ -102,7 +111,10 @@
           </div>
           <div class="card">
             <figure>
-              <img src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg" />
+              <img
+                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
+                alt="Adidas Forum Low Bad-Bunny"
+              />
             </figure>
             <div class="contenido">
               <h2>Adidas Forum Low Bad-Bunny</h2>
@@ -111,7 +123,10 @@
           </div>
           <div class="card">
             <figure>
-              <img src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg" />
+              <img
+                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
+                alt="Adidas Forum Low Bad-Bunny"
+              />
             </figure>
             <div class="contenido">
               <h2>Adidas Forum Low Bad-Bunny</h2>
@@ -120,7 +135,10 @@
           </div>
           <div class="card">
             <figure>
-              <img src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg" />
+              <img
+                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
+                alt="Adidas Forum Low Bad-Bunny"
+              />
             </figure>
             <div class="contenido">
               <h2>Adidas Forum Low Bad-Bunny</h2>
@@ -129,7 +147,10 @@
           </div>
           <div class="card">
             <figure>
-              <img src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg" />
+              <img
+                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
+                alt="Adidas Forum Low Bad-Bunny"
+              />
             </figure>
             <div class="contenido">
               <h2>Adidas Forum Low Bad-Bunny</h2>
