--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     ></script>
 
     <title>West Size</title>
+    <meta
+      name="description"
+      content="Ropa oversize con un estilo unico en Argentina"
+    />
+    <meta name="keywords" content="Streetwear, Argentina, Ropa, Oversize" />
   </head>
   <body>
     <header>
