--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -25,6 +25,11 @@
       crossorigin="anonymous"
     ></script>
     <title>Accesorios | West Size</title>
+    <meta
+      name="description"
+      content="Producto (Accesorios) de la tienda WestSize"
+    />
+    <meta name="keywords" content="Accesorios, Argentina," />
   </head>
   <body>
     <header>
@@ -86,6 +91,7 @@
             <figure>
               <img
                 src="../img/hoodie-fuck-love-atras-negro-web-b10898d23a360c0e8b16628679596979-1024-1024.png"
+                alt="Fuck Love"
               />
             </figure>
             <div class="contenido">
@@ -95,7 +101,10 @@
           </div>
           <div class="card">
             <figure>
-              <img src="../img/WhatsApp Image 2022-11-02 at 12.14.41.jpeg" />
+              <img
+                src="../img/WhatsApp Image 2022-11-02 at 12.14.41.jpeg"
+                alt="Nike Sportswear Joggers"
+              />
             </figure>
             <div class="contenido">
               <h2>Nike Sportswear Joggers</h2>
@@ -104,7 +113,10 @@
           </div>
           <div class="card">
             <figure>
-              <img src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg" />
+              <img
+                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
+                alt="Adidas Forum Low Bad-Bunny"
+              />
             </figure>
             <div class="contenido">
               <h2>Adidas Forum Low Bad-Bunny</h2>
@@ -113,7 +125,10 @@
           </div>
           <div class="card">
             <figure>
-              <img src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg" />
+              <img
+                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
+                alt="Adidas Forum Low Bad-Bunny"
+              />
             </figure>
             <div class="contenido">
               <h2>Adidas Forum Low Bad-Bunny</h2>
@@ -122,7 +137,10 @@
           </div>
           <div class="card">
             <figure>
-              <img src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg" />
+              <img
+                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
+                alt="Adidas Forum Low Bad-Bunny"
+              />
             </figure>
             <div class="contenido">
               <h2>Adidas Forum Low Bad-Bunny</h2>
@@ -131,7 +149,10 @@
           </div>
           <div class="card">
             <figure>
-              <img src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg" />
+              <img
+                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
+                alt="Adidas Forum Low Bad-Bunny"
+              />
             </figure>
             <div class="contenido">
               <h2>Adidas Forum Low Bad-Bunny</h2>
