Enlaces-Logo-Imagenes-Espacios-Politica

--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -36,7 +36,7 @@
       <nav class="navbar navbar-expand-lg bg-body shadow">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
-            <img src="../img/logoipsum-288.svg" alt="Logo" />
+            <img src="../img/Sin_asdasdadastitulo-1.png" alt="Logo" />
           </a>
           <button
             class="navbar-toggler"
@@ -90,72 +90,78 @@
           <div class="card">
             <figure>
               <img
-                src="../img/hoodie-fuck-love-atras-negro-web-b10898d23a360c0e8b16628679596979-1024-1024.png"
-                alt="Fuck Love"
+                src="../img/Bearbrick-Series-44-Sealed-Case-100_-24-Blind-Boxes.jpg"
+                alt="Bearbrick Series 44 Sealed Case 100%"
               />
             </figure>
             <div class="contenido">
-              <h2>Fuck Love</h2>
+              <h2 class="titulos__tarjetas">Bearbrick Series 44</h2>
+              <p>$7,700</p>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
               <img
-                src="../img/WhatsApp Image 2022-11-02 at 12.14.41.jpeg"
-                alt="Nike Sportswear Joggers"
+                src="../img/Funko-Pop-Basketball-Michael-Jordan-UNC-Warm-Up-Figure.jpg"
+                alt="Funko-Pop-Basketball-Michael-Jordan"
               />
             </figure>
             <div class="contenido">
-              <h2>Nike Sportswear Joggers</h2>
+              <h2 class="titulos__tarjetas">Funko Pop Michael Jordan</h2>
+              <p>$13,475</p>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
               <img
-                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
-                alt="Adidas Forum Low Bad-Bunny"
+                src="../img/AAPE-Moonface-patched-Bucket-Cream.jpg"
+                alt="AAPE-Moonface-patched-Bucket-Cream"
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">AAPE Moonface Bucket Cream</h2>
+              <p>$57,750</p>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
               <img
-                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
-                alt="Adidas Forum Low Bad-Bunny"
+                src="../img/Jordan-Flight-Control-Festival-Bag.jpg"
+                alt="Jordan-Flight-Control-Festival-Bag"
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">Jordan Flight Control</h2>
+              <p>$17,000</p>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
               <img
-                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
-                alt="Adidas Forum Low Bad-Bunny"
+                src="../img/Supreme-Utility-Bag-FW18-Purple.jpg"
+                alt="Supreme-Utility-Bag-FW18-Purple"
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">Supreme Utility Bag FW18 Purple</h2>
+              <p>$20,650</p>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
               <img
-                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
-                alt="Adidas Forum Low Bad-Bunny"
+                src="../img/Supreme-x-Dan-Colen-Fuck-Skateboard-Set-1.jpg"
+                alt="Supreme-x-Dan-Colen-Fuck-Skateboard-Set"
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">Supreme Dan Colen Fuck</h2>
+              <p>$13,200</p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -167,9 +173,15 @@
         <div class="container">
           <div class="row footer-sm__redes">
             <div class="col">
-              <a href="#"><i class="fa-brands fa-twitter tw"></i></a>
-              <a href="#"><i class="fa-brands fa-instagram ig"></i></a>
-              <a href="#"><i class="fa-brands fa-whatsapp wp"></i></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-twitter tw"></i
+              ></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-instagram ig"></i
+              ></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-whatsapp wp"></i
+              ></a>
             </div>
           </div>
         </div>
