--- a/pages/buzos.html
+++ b/pages/buzos.html
@@ -33,7 +33,7 @@
       <nav class="navbar navbar-expand-lg bg-body shadow">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
-            <img src="../img/logoipsum-288.svg" alt="Logo" />
+            <img src="../img/Sin_asdasdadastitulo-1.png" alt="Logo" />
           </a>
           <button
             class="navbar-toggler"
@@ -90,7 +90,8 @@
               />
             </figure>
             <div class="contenido">
-              <h2>Fuck Love</h2>
+              <h2 class="titulos__tarjetas">Hoodie Fvck Love</h2>
+              <p>$17,000</p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -98,11 +99,12 @@
             <figure>
               <img
                 src="../img/Supreme-Capital-Hooded-Sweatshirt-Red-433x433.jpg"
-                alt="Supreme Capital Hooded"
+                alt="Supreme-Capital-Hooded"
               />
             </figure>
             <div class="contenido">
-              <h2>Supreme Capital Hooded</h2>
+              <h2 class="titulos__tarjetas">Supreme Capital Hooded</h2>
+              <p>$24,500</p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -110,11 +112,12 @@
             <figure>
               <img
                 src="../img/The North Face -1996 Retro Nuptse.jpeg"
-                alt="The North Face Retro Nuptse"
+                alt="The-North-Face-Retro-Nuptse"
               />
             </figure>
             <div class="contenido">
-              <h2>The North Face Retro Nuptse</h2>
+              <h2 class="titulos__tarjetas">The North Face Retro Nuptse</h2>
+              <p>$43,150</p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -122,11 +125,12 @@
             <figure>
               <img
                 src="../img/Supreme-The-North-Face-Studded-Nuptse-Jacket-Red-433x433.jpg"
-                alt="Supreme The North Face Studded"
+                alt="Supreme-The-North-Face-Studded"
               />
             </figure>
             <div class="contenido">
-              <h2>Supreme The North Face Studded</h2>
+              <h2 class="titulos__tarjetas">Supreme The North Face</h2>
+              <p>$50,330</p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -134,11 +138,12 @@
             <figure>
               <img
                 src="../img/Fear of God Essentials Knit Sweater Moss.jpeg"
-                alt="Fear of God Essentials Knit Sweater Moss"
+                alt="Fear-of-God-Essentials-Knit-Sweater-Moss"
               />
             </figure>
             <div class="contenido">
-              <h2>Fear of God Essentials Knit Sweater Moss</h2>
+              <h2 class="titulos__tarjetas">FoG Essentials Sweater</h2>
+              <p>$25,300</p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -146,11 +151,12 @@
             <figure>
               <img
                 src="../img/Anti-Social-Social-Club-ASSC-Cherry-Red-Hoodie-433x433.jpg"
-                alt="Anti Social Social Club ASSC Cherry Red Hoodie"
+                alt="Anti-Social-Social-Club-ASSC-Cherry-Red-Hoodie"
               />
             </figure>
             <div class="contenido">
-              <h2>Anti Social Social Club ASSC Cherry Red Hoodie</h2>
+              <h2 class="titulos__tarjetas">ASSC Cherry Red Hoodie</h2>
+              <p>$32,500</p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -162,9 +168,15 @@
         <div class="container">
           <div class="row footer-sm__redes">
             <div class="col">
-              <a href="#"><i class="fa-brands fa-twitter tw"></i></a>
-              <a href="#"><i class="fa-brands fa-instagram ig"></i></a>
-              <a href="#"><i class="fa-brands fa-whatsapp wp"></i></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-twitter tw"></i
+              ></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-instagram ig"></i
+              ></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-whatsapp wp"></i
+              ></a>
             </div>
           </div>
         </div>
