--- a/pages/comocomprar.html
+++ b/pages/comocomprar.html
@@ -36,7 +36,7 @@
       <nav class="navbar navbar-expand-lg bg-body shadow">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
-            <img src="../img/logoipsum-288.svg" alt="Logo" />
+            <img src="../img/Sin_asdasdadastitulo-1.png" alt="Logo" />
           </a>
           <button
             class="navbar-toggler"
@@ -133,9 +133,15 @@
         <div class="container">
           <div class="row footer-sm__redes">
             <div class="col">
-              <a href="#"><i class="fa-brands fa-twitter tw"></i></a>
-              <a href="#"><i class="fa-brands fa-instagram ig"></i></a>
-              <a href="#"><i class="fa-brands fa-whatsapp wp"></i></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-twitter tw"></i
+              ></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-instagram ig"></i
+              ></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-whatsapp wp"></i
+              ></a>
             </div>
           </div>
         </div>
