--- a/pages/drops.html
+++ b/pages/drops.html
@@ -36,7 +36,7 @@
       <nav class="navbar navbar-expand-lg bg-body shadow">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
-            <img src="../img/logoipsum-288.svg" alt="Logo" />
+            <img src="../img/Sin_asdasdadastitulo-1.png" alt="Logo" />
           </a>
           <button
             class="navbar-toggler"
@@ -93,7 +93,8 @@
               />
             </figure>
             <div class="contenido">
-              <h2>Fuck Love</h2>
+              <h2 class="titulos__tarjetas">Hoodie Fvck Love v2</h2>
+              <p>$17,000</p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -105,7 +106,8 @@
               />
             </figure>
             <div class="contenido">
-              <h2>Nike Sportswear Joggers</h2>
+              <h2 class="titulos__tarjetas">Nike Sportswear Joggers</h2>
+              <p>$67,375</p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -117,43 +119,47 @@
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">Adidas Forum Low Bad-Bunny</h2>
+              <p>$273,240</p>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
               <img
-                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
-                alt="Adidas Forum Low Bad-Bunny"
+                src="../img/adidas-Argentina-2022-Authentic-Home-Jersey-White-Light-Blue.jpg"
+                alt="adidas-Argentina-2022"
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">Adidas Argentina 2022 Stadium</h2>
+              <p>$53,900</p>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
               <img
-                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
-                alt="Adidas Forum Low Bad-Bunny"
+                src="../img/Supreme-The-North-Face-Studded-Nuptse-Jacket-Red-433x433.jpg"
+                alt="Supreme-The-North-Face-Studded-Nuptse-Jacket-Red"
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">Supreme The North Face</h2>
+              <p>$50,330</p>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
               <img
-                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
-                alt="Adidas Forum Low Bad-Bunny"
+                src="../img/Funko-Pop-Basketball-Michael-Jordan-UNC-Warm-Up-Figure.jpg"
+                alt="Funko-Pop-Basketball-Michael-Jordan-UNC-Warm-Up-Figure"
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">Funko Pop Michael Jordan</h2>
+              <p>$13,475</p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -165,9 +171,15 @@
         <div class="container">
           <div class="row footer-sm__redes">
             <div class="col">
-              <a href="#"><i class="fa-brands fa-twitter tw"></i></a>
-              <a href="#"><i class="fa-brands fa-instagram ig"></i></a>
-              <a href="#"><i class="fa-brands fa-whatsapp wp"></i></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-twitter tw"></i
+              ></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-instagram ig"></i
+              ></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-whatsapp wp"></i
+              ></a>
             </div>
           </div>
         </div>
