--- a/pages/pantalones.html
+++ b/pages/pantalones.html
@@ -36,7 +36,7 @@
       <nav class="navbar navbar-expand-lg bg-body shadow">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
-            <img src="../img/logoipsum-288.svg" alt="Logo" />
+            <img src="../img/Sin_asdasdadastitulo-1.png" alt="Logo" />
           </a>
           <button
             class="navbar-toggler"
@@ -93,7 +93,8 @@
               />
             </figure>
             <div class="contenido">
-              <h2>Fuck Love</h2>
+              <h2 class="titulos__tarjetas">Fuck Love</h2>
+              p
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -105,7 +106,8 @@
               />
             </figure>
             <div class="contenido">
-              <h2>Nike Sportswear Joggers</h2>
+              <h2 class="titulos__tarjetas">Nike Sportswear Joggers</h2>
+              <p></p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -117,7 +119,8 @@
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">Adidas Forum Low Bad-Bunny</h2>
+              <p></p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -129,7 +132,8 @@
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">Adidas Forum Low Bad-Bunny</h2>
+              <p></p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -141,7 +145,8 @@
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">Adidas Forum Low Bad-Bunny</h2>
+              <p></p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -153,7 +158,8 @@
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">Adidas Forum Low Bad-Bunny</h2>
+              <p></p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -165,9 +171,15 @@
         <div class="container">
           <div class="row footer-sm__redes">
             <div class="col">
-              <a href="#"><i class="fa-brands fa-twitter tw"></i></a>
-              <a href="#"><i class="fa-brands fa-instagram ig"></i></a>
-              <a href="#"><i class="fa-brands fa-whatsapp wp"></i></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-twitter tw"></i
+              ></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-instagram ig"></i
+              ></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-whatsapp wp"></i
+              ></a>
             </div>
           </div>
         </div>
