--- a/pages/politica.html
+++ b/pages/politica.html
@@ -33,7 +33,7 @@
       <nav class="navbar navbar-expand-lg bg-body shadow">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
-            <img src="../img/logoipsum-288.svg" alt="Logo" />
+            <img src="../img/Sin_asdasdadastitulo-1.png" alt="Logo" />
           </a>
           <button
             class="navbar-toggler"
@@ -79,19 +79,35 @@
     <div class="titulos">
       <h1 class="animate__animated animate__flipInX">Politica</h1>
     </div>
-    <p class="texto__inicio">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quo corporis
-      culpa illum necessitatibus labore est in ipsum et, minus quibusdam non
-      omnis nesciunt itaque commodi ipsam. Quasi, voluptate beatae!
-    </p>
+    <div class="container row info">
+      <p>
+        El presente Política de Privacidad establece los términos en que WEST
+        SIZE usa y protege la información que es proporcionada por sus usuarios
+        al momento de utilizar su sitio web. Esta compañía está comprometida con
+        la seguridad de los datos de sus usuarios. Cuando le pedimos llenar los
+        campos de información personal con la cual usted pueda ser identificado,
+        lo hacemos asegurando que sólo se empleará de acuerdo con los términos
+        de este documento. Sin embargo esta Política de Privacidad puede cambiar
+        con el tiempo o ser actualizada por lo que le recomendamos y enfatizamos
+        revisar continuamente esta página para asegurarse que está de acuerdo
+        con dichos cambios.
+      </p>
+    </div>
+
     <footer class="footer">
       <div class="footer-sm">
         <div class="container">
           <div class="row footer-sm__redes">
             <div class="col">
-              <a href="#"><i class="fa-brands fa-twitter tw"></i></a>
-              <a href="#"><i class="fa-brands fa-instagram ig"></i></a>
-              <a href="#"><i class="fa-brands fa-whatsapp wp"></i></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-twitter tw"></i
+              ></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-instagram ig"></i
+              ></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-whatsapp wp"></i
+              ></a>
             </div>
           </div>
         </div>
