--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -36,7 +36,7 @@
       <nav class="navbar navbar-expand-lg bg-body shadow">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
-            <img src="../img/logoipsum-288.svg" alt="Logo" />
+            <img src="../img/Sin_asdasdadastitulo-1.png" alt="Logo" />
           </a>
           <button
             class="navbar-toggler"
@@ -88,72 +88,78 @@
           <div class="card">
             <figure>
               <img
-                src="../img/hoodie-fuck-love-atras-negro-web-b10898d23a360c0e8b16628679596979-1024-1024.png"
-                alt="Fuck Love"
+                src="../img/adidas-Argentina-2022-Authentic-Home-Jersey-White-Light-Blue.jpg"
+                alt="adidas-Argentina-2022"
               />
             </figure>
             <div class="contenido">
-              <h2>Fuck Love</h2>
+              <h2 class="titulos__tarjetas">Adidas Argentina 2022 Stadium</h2>
+              <p>$53,900</p>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
               <img
-                src="../img/WhatsApp Image 2022-11-02 at 12.14.41.jpeg"
-                alt="Nike Sportswear Joggers"
+                src="../img/Anti-Social-Social-Club-Camo-Pink-Tee-White.jpg"
+                alt="Anti-Social-Social-Club-Camo-Pink-Tee-White"
               />
             </figure>
             <div class="contenido">
-              <h2>Nike Sportswear Joggers</h2>
+              <h2 class="titulos__tarjetas">ASSC Camo Pink Tee White</h2>
+              <p>$13,700</p>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
               <img
-                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
-                alt="Adidas Forum Low Bad-Bunny"
+                src="../img/Anti-Social-Social-Club-Kkoch-Tee-Black.jpg"
+                alt="Anti-Social-Social-Club-Kkoch-Tee-Black"
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">ASSC Kkoch Tee Black</h2>
+              <p>$15,340</p>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
               <img
-                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
-                alt="Adidas Forum Low Bad-Bunny"
+                src="../img/Supreme-Lil-Kim-Tee-Light-Olive.jpg"
+                alt="Supreme-Lil-Kim-Tee-Light-Olive"
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">Supreme Lil Kim Tee Light Olive</h2>
+              <p>$24,500</p>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
               <img
-                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
-                alt="Adidas Forum Low Bad-Bunny"
+                src="../img/Undefeated-x-Anti-Social-Social-Club-Pink.jpg"
+                alt="Undefeated-x-Anti-Social-Social-Club-Pink"
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">Undefeated x ASSC Pink</h2>
+              <p>$40,500</p>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
               <img
-                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
-                alt="Adidas Forum Low Bad-Bunny"
+                src="../img/Fear-of-God-Essentials-Core-Collection-Kids.jpeg"
+                alt="Fear-of-God-Essentials-Core-Collection-Kids"
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">FoG Essentials Core</h2>
+              <p>$26,300</p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -165,9 +171,15 @@
         <div class="container">
           <div class="row footer-sm__redes">
             <div class="col">
-              <a href="#"><i class="fa-brands fa-twitter tw"></i></a>
-              <a href="#"><i class="fa-brands fa-instagram ig"></i></a>
-              <a href="#"><i class="fa-brands fa-whatsapp wp"></i></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-twitter tw"></i
+              ></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-instagram ig"></i
+              ></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-whatsapp wp"></i
+              ></a>
             </div>
           </div>
         </div>
