--- a/pages/zapatillas.html
+++ b/pages/zapatillas.html
@@ -36,7 +36,7 @@
       <nav class="navbar navbar-expand-lg bg-body shadow">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
-            <img src="../img/logoipsum-288.svg" alt="Logo" />
+            <img src="../img/Sin_asdasdadastitulo-1.png" alt="Logo" />
           </a>
           <button
             class="navbar-toggler"
@@ -88,36 +88,26 @@
           <div class="card">
             <figure>
               <img
-                src="../img/hoodie-fuck-love-atras-negro-web-b10898d23a360c0e8b16628679596979-1024-1024.png"
-                alt="Fuck Love"
+                src="../img/air-force-1-high-black-433x433.jpg"
+                alt="air-force-1-high-black"
               />
             </figure>
             <div class="contenido">
-              <h2>Fuck Love</h2>
+              <h2 class="titulos__tarjetas">Air Force 1 High Black</h2>
+              <p>$53,600</p>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
               <img
-                src="../img/WhatsApp Image 2022-11-02 at 12.14.41.jpeg"
-                alt="Adidas Forum Low Bad-Bunny"
+                src="../img/Jordan-1-Low-Shadow-Toe.jpg"
+                alt="Jordan-1-Low-Shadow-Toe"
               />
             </figure>
             <div class="contenido">
-              <h2>Nike Sportswear Joggers</h2>
-              <a href="#">Comprar</a>
-            </div>
-          </div>
-          <div class="card">
-            <figure>
-              <img
-                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
-                alt="Adidas Forum Low Bad-Bunny"
-              />
-            </figure>
-            <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">Jordan 1 Low Shadow Toe</h2>
+              <p>$45,000</p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -125,35 +115,51 @@
             <figure>
               <img
                 src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
-                alt="Adidas Forum Low Bad-Bunny"
+                alt="Adidas-Forum-Low-Bad-Bunny"
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">Adidas Forum Low Bad-Bunny</h2>
+              <p>$273,240</p>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
               <img
-                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
-                alt="Adidas Forum Low Bad-Bunny"
+                src="../img/Nike-Air-Force-1-Low-LXX-Zip-Serena-Williams-Summit-White-W.jpg"
+                alt="Nike-Air-Force-1-Low-LXX-Zip-Serena-Williams-Summit-White"
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">AF1 Serena Williams Summit</h2>
+              <p>$60,000</p>
               <a href="#">Comprar</a>
             </div>
           </div>
           <div class="card">
             <figure>
               <img
-                src="../img/WhatsApp Image 2022-11-02 at 12.17.32.jpeg"
-                alt="Adidas Forum Low Bad-Bunny"
+                src="../img/Nike-Air-Force-1-Low-Mesh-Pocket-White-Black.jpg"
+                alt="Air-Force-1-Low-Mesh-Pocket-White-Black"
               />
             </figure>
             <div class="contenido">
-              <h2>Adidas Forum Low Bad-Bunny</h2>
+              <h2 class="titulos__tarjetas">AF1 Mesh Pocket White Black</h2>
+              <p>$54.300</p>
+              <a href="#">Comprar</a>
+            </div>
+          </div>
+          <div class="card">
+            <figure>
+              <img
+                src="../img/Nike-Dunk-Low-Two-Tone-Grey.jpg"
+                alt="Nike-Dunk-Low-Two-Tone-Grey"
+              />
+            </figure>
+            <div class="contenido">
+              <h2 class="titulos__tarjetas">Nike Dunk Two Tone Grey</h2>
+              <p>$75,950</p>
               <a href="#">Comprar</a>
             </div>
           </div>
@@ -165,9 +171,15 @@
         <div class="container">
           <div class="row footer-sm__redes">
             <div class="col">
-              <a href="#"><i class="fa-brands fa-twitter tw"></i></a>
-              <a href="#"><i class="fa-brands fa-instagram ig"></i></a>
-              <a href="#"><i class="fa-brands fa-whatsapp wp"></i></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-twitter tw"></i
+              ></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-instagram ig"></i
+              ></a>
+              <a href="../index.html"
+                ><i class="fa-brands fa-whatsapp wp"></i
+              ></a>
             </div>
           </div>
         </div>
