--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <title>West Size</title>
     <meta
       name="description"
-      content="Ropa oversize con un estilo unico en Argentina"
+      content="Ropa Streetwear con un estilo unico en Argentina"
     />
     <meta name="keywords" content="Streetwear, Argentina, Ropa, Oversize" />
   </head>
